--- a/08-HTML/homework/hojadeestilo.css
+++ b/08-HTML/homework/hojadeestilo.css
@@ -16,3 +16,7 @@
                 margin: 50px;
                 font-size: 18px;
             }
+            body
+            {
+                background-image: url(bosque.jpg);
+            }
