--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,6 +7,8 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
+    display:block;
+    text-align: center;
 
 }
 
@@ -15,22 +17,44 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Acá va tu código */
 
+#ejerciciodos 
+{
+    visibility: hidden;
+}
+
 
 
 /* Ejercicio 3: */
-
+#ejerciciotres
+{
+position:relative;
+top:100px;
+left:200px;
+}
 /* Acá va tu código */
 
 
 
 /* Ejercicio 4: */
-
+#ejerciciocuatro
+{
+    position: fixed;
+    top:0;
+    left:0;
+}
 /* Acá va tu código */
 
 
 
 /* Ejercicio 5: */
-
+#ejerciciocinco
+{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row-reverse;
+    
+}
 /* Acá va tu código */
 
 
